<resources>
    <string name="app_name">WritersBloc</string>
    <string name="title_activity_category">Categories</string>
    <string name="title_activity_add_category_fragment">AddCategoryFragment</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_progress">This page is currently being developed, as such, the layout and functionality is expected to change at the discretion of the developers.</string>
    <string name="login_header">Login:</string>
    <string name="username_label">User Name:</string>
    <string name="password_label">Password:  </string>
    <string name="title_activity_project">Projects</string>
    <string name="title_activity_signup">Signup:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_page_list">Pages</string>
    <string name="title_activity_graph">Graph</string>
    <string name="app_intro">Writer\'s Bloc Tutorial</string>
    <string name="onboard_intro1_title">Welcome to Writer\'s Bloc!</string>
    <string name="onboard_intro1_desc">Easily create projects and new categories to organize your ideas</string>
    <string name="onboard_intro2_title">Create Pages</string>
    <string name="onboard_intro2_desc">Seamlessly create pages that describe parts of your story</string>
    <string name="onboard_intro3_title">Linking between Pages</string>
    <string name="onboard_intro3_desc">Automatically links page names together to show relationship</string>
    <string name="userNameHint">User Name: </string>
    <string name="passwordHint">Password:</string>
    <string name="confirmHint">Confirm:</string>
    <string name="register_str">Register:</string>
    <string name="account_btn">Sign Up</string>

</resources>


