<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.atlassian.teammyrec.writersbloc.SignupActivity"
    android:background="@color/registerBackground"
    android:theme="@style/AppThemeRegister"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        >

        <TextView

            android:layout_marginLeft="20dp"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/whiteText"
            android:text="@string/register_str"
            android:id="@+id/register"
            android:layout_marginBottom="7dp"
            />

        <EditText
            android:layout_below="@id/register"
            android:paddingLeft="25dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userNameHint"
            android:id="@+id/userNameEdit"
            android:textColor="@color/whiteText"
            android:textColorHint="@color/whiteHint"
            android:background="@drawable/input_register"
            />

        <EditText
            android:password="true"
            android:paddingLeft="25dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordHint"
            android:id="@+id/passwordEdit"
            android:layout_below="@id/userNameEdit"
            android:background="@drawable/input_register"
            android:textColor="@color/whiteText"
            android:textColorHint="@color/whiteHint"
            />

        <EditText
            android:password="true"
            android:paddingLeft="25dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmHint"
            android:id="@+id/confirmEdit"
            android:layout_below="@id/passwordEdit"
            android:textColor="@color/whiteText"
            android:textColorHint="@color/whiteHint"
            android:background="@drawable/input_register"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@id/confirmEdit"
            android:background="@color/registerButton"
            android:textColor="@color/whiteText"
            android:text="@string/account_btn"
            android:textSize="20dp"
            android:onClick="signup"
            />

    </RelativeLayout>


</FrameLayout>