<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.atlassian.teammyrec.writersbloc.LoginActivity"
    android:theme="@style/AppThemeLogin"
    >

    <VideoView
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:id="@+id/backgroundVideo"
        />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppThemeLogin"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            style="@style/AppThemeLogin">


            <EditText
                android:textSize="20dp"
                android:paddingLeft="26dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:paddingRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_label"
                android:id="@+id/userNameEditLogin"
                android:background='@drawable/input_login'
                />

            <EditText
                android:textSize="20dp"
                android:paddingLeft="26dp"
                android:paddingTop="9dp"
                android:paddingBottom="9dp"
                android:paddingRight="20dp"
                android:password="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHint"
                android:id="@+id/passwordEditLogin"
                android:layout_below="@id/userNameEditLogin"
                android:background='@drawable/input_login'
                />

            <Button
                android:id="@+id/loginButton"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_header"
                android:background="@color/loginButton"
                android:textColor="@color/whiteText"
                android:onClick="goToProjects"
                android:layout_below="@id/passwordEditLogin"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                />


            <Button
                android:id="@+id/registerButton"
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_str"
                android:textColor="@color/whiteText"
                android:background="@color/loginRegisterButton"
                android:onClick="createAccount"
                android:layout_below="@id/loginButton"
                android:paddingTop="13dp"
                android:paddingBottom="13dp"
                />


        </RelativeLayout>
    </FrameLayout>
</FrameLayout>
